# data-app-python-js-hello-world

./: .gitignore  README.md  pyproject.toml
backend/: app.py  pyproject.toml
backend/data/: sample_data.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx
frontend/src/pages/: DataFrameDemo.jsx  Home.jsx  PlottingDemo.jsx
keboola-config/: setup.sh
keboola-config/nginx/sites/: default.conf
keboola-config/supervisord/services/: node.conf  python.conf
