[project]
name = "data-app-backend"
version = "0.1.0"
description = "FastAPI backend for React + FastAPI Hello World demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[tool.uv]
dev-dependencies = []
